Added pawn promotion

--- a/debug.ipynb
+++ b/debug.ipynb
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "afc71f6c",
    "metadata": {},
    "outputs": [
@@ -358,13 +358,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "foo\n"
+      "foo!\n"
      ]
     }
    ],
    "source": [
-    "if not all(range(100)):\n",
-    "    print('foo')"
+    "if 'wQ':\n",
+    "    print('foo!')"
    ]
   }
  ],
