Changed ChessMain.py and (almost) completed Game class. Added two methods for reading/obtaining FEN notation, needed to fetch data in a more convenient way. Incomplete, but self-contained and sufficient.

--- a/debug.ipynb
+++ b/debug.ipynb
@@ -20,6 +20,311 @@
    "source": [
     "[(True, 'b' + i) if i!='--' else (True, '--') for i in ['--', 'R', 'Q', 'N', 'B']]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d38b587",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    p.init()\n",
+    "    screen = p.display.set_mode((WIDTH, HEIGHT))\n",
+    "    clock = p.time.Clock()\n",
+    "    screen.fill(p.Color(\"white\"))\n",
+    "    pawn_promotion_scene = None\n",
+    "\n",
+    "    game = ChessEngine.GameState() #we initialize game as our primary object\n",
+    "    valid_moves: List[ChessEngine.Move] = game.get_valid_moves() #these are moves possible at the very beginning\n",
+    "    move_made: bool = False #This little exit_flag logic is used to avoid generating moves after every loop, saving time\n",
+    "    #print(game.board)\n",
+    "\n",
+    "    #load_images() #actually load the images \n",
+    "    draw_game_state(screen, game) #draw initial board config\n",
+    "    \n",
+    "    #this loops basically keeps the game running, it handles events happening or whatever\n",
+    "    running = True\n",
+    "    sq_selected: Union[Tuple[int, int], Tuple[()]] = () #keeps track of the last click of the user\n",
+    "    player_clicks: List[Tuple] = [] #keeps track of couples of players input. Basically is needed to update pieces inside of the board\n",
+    "\n",
+    "    while(running):\n",
+    "        for e in p.event.get():\n",
+    "            if e.type == p.QUIT:\n",
+    "                running = False\n",
+    "\n",
+    "            ## MOUSE HANDLER\n",
+    "            if e.type == p.MOUSEBUTTONDOWN:\n",
+    "                location = p.mouse.get_pos() \n",
+    "                col, row = location[0]//SQ_SIZE, location[1]//SQ_SIZE \n",
+    "                \n",
+    "                if sq_selected == (row,col):\n",
+    "                    sq_selected = () #we deselect if the same click is given as an input twice\n",
+    "                    player_clicks = []\n",
+    "                \n",
+    "                else:\n",
+    "                    sq_selected = (row, col)\n",
+    "                    player_clicks.append(sq_selected) #record the values\n",
+    "\n",
+    "                if (len(player_clicks) == 1):\n",
+    "                    if game.board[row, col] == '--':\n",
+    "                        sq_selected = ()\n",
+    "                        player_clicks = []\n",
+    "\n",
+    "                #update with the move if necessary, we move after the second input\n",
+    "                if len(player_clicks) == 2:\n",
+    "                    move = ChessEngine.Move(player_clicks[0], player_clicks[1], game)\n",
+    "                    \n",
+    "                    for engine_move in valid_moves:\n",
+    "                        if move == engine_move:\n",
+    "                            if engine_move.pawn_promotion[0]:\n",
+    "                                engine_move.pawn_promotion = (True, handle_pawn_promotion(screen, game, engine_move)) # we first want to handle pawn promotion separately in order to interact correctly with the game\n",
+    "\n",
+    "                            game.make_move(engine_move)\n",
+    "                            print(engine_move)\n",
+    "                            move_made = True\n",
+    "                            sq_selected = ()\n",
+    "                            player_clicks = []\n",
+    "\n",
+    "                            break\n",
+    "\n",
+    "                    else:\n",
+    "                        player_clicks = [sq_selected]\n",
+    "\n",
+    "            ## KEYBOARD EVENTS HANDLER\n",
+    "            if e.type == p.KEYDOWN:\n",
+    "                if e.key == p.K_z:\n",
+    "                    game.undo_move()\n",
+    "                    move_made = True\n",
+    "                    sq_selected = ()\n",
+    "                    player_clicks = []\n",
+    "\n",
+    "        if move_made:\n",
+    "            valid_moves = game.get_valid_moves()\n",
+    "            move_made = False\n",
+    "        \n",
+    "        draw_game_state(screen, game, highlighted=(sq_selected), moves=valid_moves)\n",
+    "        clock.tick(MAX_FPS)\n",
+    "        p.display.flip()\n",
+    "##\n",
+    "\n",
+    "\n",
+    "\n",
+    "##############################\n",
+    "### GRAPHICS FEATURES CODE ###\n",
+    "##############################\n",
+    "\n",
+    "\n",
+    "def draw_game_state(screen: p.Surface, gs: ChessEngine.GameState, highlighted: Optional[Union[Tuple[int, int], Tuple[()]]] = None, moves=None) -> None:\n",
+    "    '''\n",
+    "    Method that simply draws things down in a dynamical manner. Relies on the two helpers method cited below. It returns nothing, it just edits current status of the display provided as parameter.\n",
+    "    '''\n",
+    "    draw_board(screen, gs, highlighted, moves) #we first draw the skeleton\n",
+    "    draw_pieces(screen, gs) #and we place the pieces on top of it\n",
+    "    pass\n",
+    "##\n",
+    "\n",
+    "def draw_board(screen: p.Surface, game: ChessEngine.GameState, highlighted: Optional[Union[Tuple[int, int], Tuple[()]]], moves: Optional[List[ChessEngine.Move]] = None) -> None:\n",
+    "    '''Handles the drawing board squares (basically the skeleton)'''\n",
+    "\n",
+    "    possible_reaching_squares = [(move.end_row, move.end_col) for move in moves if (move.start_row, move.start_col)==highlighted] if moves is not None else []\n",
+    "\n",
+    "    check_square: Tuple[int, int] = (-1,-1)\n",
+    "    if game.in_check:\n",
+    "        check_square = game.white_king_pos if game.white_to_move else game.black_king_pos\n",
+    "\n",
+    "    for r in range(DIMENSION):\n",
+    "        for c in range(DIMENSION):\n",
+    "            color = GRAPHICS_PALETTE[((r+c)%2)]\n",
+    "            HIGHLIGHT_COLOR = LIGHT_HIGHLIGHT_COLOR[((r+c)%2)]                \n",
+    "\n",
+    "            # highlighted square\n",
+    "            if (r,c) == highlighted: \n",
+    "                col_to_move = 'w' if game.white_to_move else 'b'\n",
+    "                if game.board[r,c][0] == col_to_move: #if selected square is one of the pieces to move\n",
+    "                    p.draw.rect(screen, HIGHLIGHT_COLOR, p.Rect(c*SQ_SIZE, r*SQ_SIZE, SQ_SIZE, SQ_SIZE))\n",
+    "                else:\n",
+    "                    p.draw.rect(screen, color, p.Rect(c*SQ_SIZE, r*SQ_SIZE, SQ_SIZE, SQ_SIZE))\n",
+    "\n",
+    "            # possible moves squares\n",
+    "            elif (r,c) in possible_reaching_squares:\n",
+    "                p.draw.rect(screen, HIGHLIGHT_COLOR, p.Rect(c*SQ_SIZE, r*SQ_SIZE, SQ_SIZE, SQ_SIZE))\n",
+    "\n",
+    "            elif (r,c) == check_square:\n",
+    "                p.draw.rect(screen, CHECK_HIGHLIGHT_COLOR, p.Rect(c*SQ_SIZE, r*SQ_SIZE, SQ_SIZE, SQ_SIZE))\n",
+    "\n",
+    "            # all the remainder\n",
+    "            else:\n",
+    "                p.draw.rect(screen, color, p.Rect(c*SQ_SIZE, r*SQ_SIZE, SQ_SIZE, SQ_SIZE))\n",
+    "    pass\n",
+    "##\n",
+    "\n",
+    "def draw_pieces(screen: p.Surface, gs: ChessEngine.GameState) -> None:\n",
+    "    '''\n",
+    "    Draw the pieces on the board based on current GameState.board object passed as parameter.\n",
+    "    '''\n",
+    "    for r in range(DIMENSION):\n",
+    "        for c in range(DIMENSION):\n",
+    "            piece = gs.board[r,c]\n",
+    "            if piece != '--': #if the cell is not empty\n",
+    "                #screen.blit(IMAGES[piece], p.Rect(c*SQ_SIZE, r*SQ_SIZE, SQ_SIZE, SQ_SIZE))\n",
+    "                pass\n",
+    "##\n",
+    "\n",
+    "\n",
+    "#this is suboptimal (we open different loops, bad environment)\n",
+    "def handle_pawn_promotion(screen: p.Surface, game: ChessEngine.GameState, move: ChessEngine.Move) -> Literal['--', 'wQ', 'wR', 'wN', 'wB', 'bQ', 'bR', 'bN', 'bB']:\n",
+    "    \n",
+    "    pieces = ['Q', 'R', 'B', 'N']\n",
+    "    promotion_figures: List[Literal['--', 'wQ', 'wR', 'wN', 'wB', 'bQ', 'bR', 'bN', 'bB']] = [game.col() + i for i in pieces]  # pyright: ignore[reportAssignmentType]\n",
+    "\n",
+    "    p.draw.rect(screen, 'black', p.Rect(BOX_INIT_X, BOX_INIT_Y, BOX_WIDTH, BOX_HEIGHT))\n",
+    "\n",
+    "    for i, piece in enumerate(promotion_figures):\n",
+    "         p.draw.rect(screen, GRAPHICS_PALETTE[i%2], p.Rect(PAWN_PROMOTION_INIT_X + i*PAWN_PROMOTION_HEIGHT, PAWN_PROMOTION_INIT_Y, PAWN_PROMOTION_HEIGHT, PAWN_PROMOTION_HEIGHT))\n",
+    "\n",
+    "         #screen.blit(IMAGES[piece], p.Rect(PAWN_PROMOTION_INIT_X + i*PAWN_PROMOTION_HEIGHT, PAWN_PROMOTION_INIT_Y, PAWN_PROMOTION_HEIGHT, PAWN_PROMOTION_HEIGHT))\n",
+    "\n",
+    "    p.display.update()\n",
+    "\n",
+    "    # handling the exit event\n",
+    "    exit_request: bool = False\n",
+    "    while not exit_request:\n",
+    "        for e in p.event.get():\n",
+    "            if e.type == p.MOUSEBUTTONDOWN:\n",
+    "                loc = p.mouse.get_pos()\n",
+    "                x, y = loc[0], loc[1]\n",
+    "\n",
+    "                x = loc[0] - PAWN_PROMOTION_INIT_X\n",
+    "                y = loc[1] - PAWN_PROMOTION_INIT_Y\n",
+    "\n",
+    "                if(all([0<=x<=PAWN_PROMOTION_WIDTH, 0<=y<=PAWN_PROMOTION_HEIGHT])):\n",
+    "                    x:int = x//PAWN_PROMOTION_HEIGHT\n",
+    "                    return promotion_figures[x]\n",
+    "                    exit_request = not exit_request\n",
+    "##"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "1666e0bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ab\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = 'a'\n",
+    "s += 'b' if True else 'c'\n",
+    "\n",
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "8f059892",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0: a\n",
+      "1: b\n",
+      "2: c\n",
+      "3: d\n",
+      "4: e\n",
+      "5: f\n",
+      "6: g\n",
+      "7: h\n"
+     ]
+    }
+   ],
+   "source": [
+    "for num, char in enumerate('abcdefgh'):\n",
+    "    print(f'{num}: {char}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "945f2b26",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([['--', '--', '--', '--', '--', '--', '--', '--'],\n",
+       "       ['wP', 'wP', 'wP', 'wP', 'wP', 'wP', 'wP', 'wP'],\n",
+       "       ['--', '--', '--', '--', '--', '--', '--', '--'],\n",
+       "       ['--', '--', '--', '--', '--', '--', '--', '--'],\n",
+       "       ['--', '--', '--', '--', '--', '--', '--', '--'],\n",
+       "       ['--', '--', '--', '--', '--', '--', '--', '--'],\n",
+       "       ['--', '--', '--', '--', '--', '--', '--', '--'],\n",
+       "       ['--', '--', '--', '--', '--', '--', '--', '--']], dtype='<U2')"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "a = []\n",
+    "a += 64 * ['--']\n",
+    "a[8:16] = 8*['wP']\n",
+    "\n",
+    "np.array([i if i else '--' for i in a]).reshape((8,8))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "5f5ac630",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['aa', '--', '--', '--', '--', '--', '--', '--', '--']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "['aa'] + 8 * ['--']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "afc0753a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 'b'\n",
+    "white_to_move = (i=='w')\n",
+    "print(white_to_move)"
+   ]
   }
  ],
  "metadata": {
